--- a/assets/css/sendmoney.css
+++ b/assets/css/sendmoney.css
@@ -98,7 +98,7 @@ body {
     top: 50%; left: 50%; 
     transform: translate(-50%, -50%); 
     background: white; 
-    padding: 30px; 
+    padding: 30px 150px; 
     border-radius: 25px;
     box-shadow: 0 20px 50px rgba(0,0,0,0.4); 
     z-index: 1000; 
